Updated merger frequency to 146 Hz; Chirp mass now = 70.73 solar mass

--- a/simple_BBH_waveform.ipynb
+++ b/simple_BBH_waveform.ipynb
@@ -6,7 +6,7 @@
       "name": "simple_BBH_waveform.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPf8T9oLOHTWNlLUHqLYqS/",
+      "authorship_tag": "ABX9TyO/trrm5SvPRBdoymWRR7Iy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -102,7 +102,7 @@
           "height": 320
         },
         "id": "dnaJhB2kZQ-d",
-        "outputId": "3383d968-03ac-4fc3-826d-ce70095aa24c"
+        "outputId": "c3846579-24f0-4d01-ec90-7379309ccefc"
       },
       "execution_count": 2,
       "outputs": [
@@ -143,10 +143,35 @@
         "! pip install -q 'lalsuite==6.82' 'PyCBC==1.18.0'"
       ],
       "metadata": {
-        "id": "YoPcnu6uZiom"
+        "id": "YoPcnu6uZiom",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "49726150-9fd2-46da-e3dc-c719931724ac"
       },
       "execution_count": 3,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[K     |████████████████████████████████| 27.3 MB 166 kB/s \n",
+            "\u001b[K     |████████████████████████████████| 6.3 MB 47.6 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 1.4 MB 32.5 MB/s \n",
+            "\u001b[?25h  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
+            "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
+            "    Preparing wheel metadata ... \u001b[?25l\u001b[?25hdone\n",
+            "\u001b[K     |████████████████████████████████| 51 kB 5.4 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 201 kB 58.5 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 75 kB 3.6 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 55 kB 3.0 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 295 kB 42.9 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 3.6 MB 49.5 MB/s \n",
+            "\u001b[?25h  Building wheel for lscsoft-glue (PEP 517) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Building wheel for ligo-segments (setup.py) ... \u001b[?25l\u001b[?25hdone\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -202,7 +227,7 @@
           "height": 295
         },
         "id": "ifacYCY6l_do",
-        "outputId": "2a639941-5043-40ff-9c13-b53714bc1fbd"
+        "outputId": "37f5648e-50d3-44ad-e33e-85b52443e712"
       },
       "execution_count": 5,
       "outputs": [
@@ -282,7 +307,7 @@
           "height": 241
         },
         "id": "cibslVM_uIYK",
-        "outputId": "6d36eb9d-e572-47e8-b6d7-93bbf0b82f1b"
+        "outputId": "eefaa056-871f-41a6-c0a1-212216a8f92c"
       },
       "execution_count": 8,
       "outputs": [
@@ -323,7 +348,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XFlJA2IsCIYP",
-        "outputId": "41173fe5-9a09-417e-9a2a-cc9e2c037c84"
+        "outputId": "60dbec69-7f66-4924-dc82-eeb60532644e"
       },
       "execution_count": 9,
       "outputs": [
@@ -375,7 +400,7 @@
           "height": 513
         },
         "id": "cyyA1tCTtb-2",
-        "outputId": "66f000d6-dabc-405e-f4b7-f7ed4901f96c"
+        "outputId": "a98c3d6e-0c3e-4e22-c858-e42f85022d5c"
       },
       "execution_count": 10,
       "outputs": [
@@ -428,7 +453,7 @@
         "c = 3*10**8           # speed of light\n",
         "G = 6.674*10**(-11)   # gravitational constant\n",
         "R = 1.7               # compactness ratio\n",
-        "freq_merger =  170.6\n",
+        "freq_merger =  146\n",
         "M_total = (c**3)/(R**(3/2)*2**(3/2)*G*freq_merger*1.989*10**30)/(np.pi)   \n",
         "print(r'The estimated total mass is: '+str(M_total)+r'solar mass.')"
       ],
@@ -438,7 +463,7 @@
           "height": 629
         },
         "id": "p6Ho3WXrHMN2",
-        "outputId": "fcd9c7cf-4e68-4e59-b154-7ebe6e7d0a97"
+        "outputId": "bc72dc05-e156-4af9-d44b-0a09cbbd6b9a"
       },
       "execution_count": 11,
       "outputs": [
@@ -480,7 +505,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "The estimated total mass is: 60.53346075215734solar mass.\n"
+            "The estimated total mass is: 70.73293427615097solar mass.\n"
           ]
         }
       ]
@@ -495,7 +520,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Z3ieM8oCm0DG",
-        "outputId": "1d32a7ef-ed0b-4e26-86b3-511309b4b621"
+        "outputId": "7aea4a4e-7c9a-468f-8506-748bffa83223"
       },
       "execution_count": 12,
       "outputs": [
@@ -503,15 +528,31 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: lmfit in /usr/local/lib/python3.7/dist-packages (1.0.3)\n",
-            "Requirement already satisfied: uncertainties>=3.0.1 in /usr/local/lib/python3.7/dist-packages (from lmfit) (3.1.6)\n",
+            "Collecting lmfit\n",
+            "  Downloading lmfit-1.0.3.tar.gz (292 kB)\n",
+            "\u001b[K     |████████████████████████████████| 292 kB 5.3 MB/s \n",
+            "\u001b[?25hCollecting asteval>=0.9.22\n",
+            "  Downloading asteval-0.9.26.tar.gz (40 kB)\n",
+            "\u001b[K     |████████████████████████████████| 40 kB 2.4 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: numpy>=1.18 in /usr/local/lib/python3.7/dist-packages (from lmfit) (1.19.5)\n",
             "Requirement already satisfied: scipy>=1.4 in /usr/local/lib/python3.7/dist-packages (from lmfit) (1.4.1)\n",
-            "Requirement already satisfied: asteval>=0.9.22 in /usr/local/lib/python3.7/dist-packages (from lmfit) (0.9.26)\n",
-            "Requirement already satisfied: numpy>=1.18 in /usr/local/lib/python3.7/dist-packages (from lmfit) (1.19.5)\n",
-            "Requirement already satisfied: importlib-metadata in /usr/local/lib/python3.7/dist-packages (from asteval>=0.9.22->lmfit) (4.10.1)\n",
+            "Collecting uncertainties>=3.0.1\n",
+            "  Downloading uncertainties-3.1.6-py2.py3-none-any.whl (98 kB)\n",
+            "\u001b[K     |████████████████████████████████| 98 kB 5.1 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: importlib_metadata in /usr/local/lib/python3.7/dist-packages (from asteval>=0.9.22->lmfit) (4.10.1)\n",
             "Requirement already satisfied: future in /usr/local/lib/python3.7/dist-packages (from uncertainties>=3.0.1->lmfit) (0.16.0)\n",
-            "Requirement already satisfied: typing-extensions>=3.6.4 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata->asteval>=0.9.22->lmfit) (3.10.0.2)\n",
-            "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata->asteval>=0.9.22->lmfit) (3.7.0)\n"
+            "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.7/dist-packages (from importlib_metadata->asteval>=0.9.22->lmfit) (3.7.0)\n",
+            "Requirement already satisfied: typing-extensions>=3.6.4 in /usr/local/lib/python3.7/dist-packages (from importlib_metadata->asteval>=0.9.22->lmfit) (3.10.0.2)\n",
+            "Building wheels for collected packages: lmfit, asteval\n",
+            "  Building wheel for lmfit (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for lmfit: filename=lmfit-1.0.3-py3-none-any.whl size=84402 sha256=fd6f1b3e47e77614b60dbede84c0d3f1bb89c146a5ea83a09a2c91399157e0d2\n",
+            "  Stored in directory: /root/.cache/pip/wheels/b9/7a/d1/236aa0f8196b264fda481a112f7cfb1bfde7bfb20235f8e331\n",
+            "  Building wheel for asteval (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for asteval: filename=asteval-0.9.26-py3-none-any.whl size=17648 sha256=f39bfd550957b63fc68161ae10acd211a03f786f1da213e02da6cdc4cfef8f34\n",
+            "  Stored in directory: /root/.cache/pip/wheels/4c/e9/f0/bc343d5b77d2fded45177f424a6b0b9224b92ff6e7c150bad4\n",
+            "Successfully built lmfit asteval\n",
+            "Installing collected packages: uncertainties, asteval, lmfit\n",
+            "Successfully installed asteval-0.9.26 lmfit-1.0.3 uncertainties-3.1.6\n"
           ]
         }
       ]
@@ -561,7 +602,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 647
         },
-        "outputId": "0284aec9-a3e1-47aa-e7b5-71c8c5e73dad"
+        "outputId": "11e5a464-23e3-4ffd-968c-28c11cc4a2c3"
       },
       "execution_count": 13,
       "outputs": [
@@ -617,7 +658,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5TVeAWDj8c1P",
-        "outputId": "a4e3b683-fda8-4d76-9d27-ae917bed0524"
+        "outputId": "2412ba1e-eaa8-46b0-e013-1a3125394c8b"
       },
       "execution_count": 14,
       "outputs": [
@@ -625,7 +666,10 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: TFchirp in /usr/local/lib/python3.7/dist-packages (0.0.2)\n"
+            "Collecting TFchirp\n",
+            "  Downloading TFchirp-0.0.2-py3-none-any.whl (15 kB)\n",
+            "Installing collected packages: TFchirp\n",
+            "Successfully installed TFchirp-0.0.2\n"
           ]
         }
       ]
@@ -657,7 +701,7 @@
           "height": 382
         },
         "id": "23g8apDdWMxc",
-        "outputId": "2c69ff30-ac0f-4361-a2ed-be45327643e7"
+        "outputId": "173b5e10-12b3-442a-bce9-9d37f11905a6"
       },
       "execution_count": 15,
       "outputs": [
@@ -736,7 +780,7 @@
           "height": 300
         },
         "id": "kMhK7_UrPEfX",
-        "outputId": "76a1e294-e880-445b-89d5-ef0bf4966827"
+        "outputId": "17d3876e-c7fd-4af5-a825-085760341ba2"
       },
       "execution_count": 17,
       "outputs": [
@@ -798,7 +842,7 @@
           "height": 312
         },
         "id": "IamFP_7wkoF2",
-        "outputId": "c3480703-7f97-43af-e635-70d952d78072"
+        "outputId": "4947407b-3be9-46a9-806d-2492641721e6"
       },
       "execution_count": 18,
       "outputs": [
@@ -850,7 +894,7 @@
           "height": 312
         },
         "id": "unbtcQrnUv-S",
-        "outputId": "ac913864-ec43-45ca-f8ae-c7e809cad7ae"
+        "outputId": "da55881a-8ee9-452d-96f6-f1ecb37eac60"
       },
       "execution_count": 19,
       "outputs": [
@@ -890,7 +934,7 @@
           "height": 269
         },
         "id": "t_tEQ9h4QSIC",
-        "outputId": "65937d1f-0550-4b18-9da5-a6e33ec1da70"
+        "outputId": "c674975c-68c9-4fca-ca1d-fb2ba347d56a"
       },
       "execution_count": 20,
       "outputs": [
