--- a/simple_BBH_waveform.ipynb
+++ b/simple_BBH_waveform.ipynb
@@ -6,7 +6,7 @@
       "name": "simple_BBH_waveform.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO/trrm5SvPRBdoymWRR7Iy",
+      "authorship_tag": "ABX9TyPY/Hu2f45olOPSS0e0faLl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -102,7 +102,7 @@
           "height": 320
         },
         "id": "dnaJhB2kZQ-d",
-        "outputId": "c3846579-24f0-4d01-ec90-7379309ccefc"
+        "outputId": "9e21c815-43ed-4683-cbfa-0f1b98b40630"
       },
       "execution_count": 2,
       "outputs": [
@@ -147,7 +147,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "49726150-9fd2-46da-e3dc-c719931724ac"
+        "outputId": "eff175a1-185f-45fa-d883-279dae47297e"
       },
       "execution_count": 3,
       "outputs": [
@@ -155,18 +155,18 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[K     |████████████████████████████████| 27.3 MB 166 kB/s \n",
-            "\u001b[K     |████████████████████████████████| 6.3 MB 47.6 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 1.4 MB 32.5 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 27.3 MB 1.5 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 6.3 MB 10.6 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 1.4 MB 25.7 MB/s \n",
             "\u001b[?25h  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
             "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
             "    Preparing wheel metadata ... \u001b[?25l\u001b[?25hdone\n",
-            "\u001b[K     |████████████████████████████████| 51 kB 5.4 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 201 kB 58.5 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 75 kB 3.6 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 55 kB 3.0 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 295 kB 42.9 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 3.6 MB 49.5 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 51 kB 6.2 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 75 kB 3.9 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 201 kB 54.7 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 55 kB 3.6 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 295 kB 59.4 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 3.6 MB 54.0 MB/s \n",
             "\u001b[?25h  Building wheel for lscsoft-glue (PEP 517) ... \u001b[?25l\u001b[?25hdone\n",
             "  Building wheel for ligo-segments (setup.py) ... \u001b[?25l\u001b[?25hdone\n"
           ]
@@ -208,10 +208,10 @@
         "# Frequency pass filter and downsample the data to 2048Hz \n",
         "rate = 2048\n",
         "# (normally 4096Hz is used but in this simple calculation the sampling Freq can be lower)\n",
-        "hdata = highpass(hdata, 15.0)\n",
+        "hdata = highpass(hdata, 15.0)       # remove some lower freq components\n",
         "hdata = resample_to_delta_t(hdata, 1.0/rate)\n",
         "\n",
-        "ldata = highpass(ldata, 15.0)\n",
+        "ldata = highpass(ldata, 15.0)       # remove some lower freq components\n",
         "ldata = resample_to_delta_t(ldata, 1.0/rate)\n",
         "\n",
         "# crop the signal\n",
@@ -227,7 +227,7 @@
           "height": 295
         },
         "id": "ifacYCY6l_do",
-        "outputId": "37f5648e-50d3-44ad-e33e-85b52443e712"
+        "outputId": "6db9b823-4721-4965-96ff-fbc1baae13f0"
       },
       "execution_count": 5,
       "outputs": [
@@ -252,6 +252,7 @@
         "\n",
         "from pycbc.psd import interpolate, inverse_spectrum_truncation\n",
         "# Estimate the power spectral density\n",
+        "# the PSDs are used in the denoising step (strain whitening)\n",
         "psdh = conditionedhdata.psd(4); psdl = conditionedldata.psd(4)       # take the first 4 seconds of data and calculate the psd\n",
         "psdh = interpolate(psdh, conditionedhdata.delta_f); psdl = interpolate(psdl, conditionedldata.delta_f)       # interpolate the resutl to the proper length\n",
         "psdh = inverse_spectrum_truncation(psdh, int(4 * conditionedhdata.sample_rate), low_frequency_cutoff=15)\n",
@@ -266,10 +267,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# Here are some Signal to Noise (SNR) and merger time data avaliable on GW150914\n",
+        "# Here are some Signal to Noise ratio (SNR) and merger time data avaliable on GW150914\n",
         "# we skip the calculation here\n",
-        "snrp = 19.677089013145903\n",
-        "time = 1126259462.4248047"
+        "snrp = 19.677089013145903         # peak SNR\n",
+        "time = 1126259462.4248047         # peak time"
       ],
       "metadata": {
         "id": "ryetcyuHt_vr"
@@ -284,7 +285,7 @@
         "white_hdata = (conditionedhdata.to_frequencyseries() / psdh**0.5).to_timeseries()\n",
         "white_ldata = (conditionedldata.to_frequencyseries() / psdl**0.5).to_timeseries()\n",
         "\n",
-        "# Apply high pass and low pass (frequency) filter again\n",
+        "# Apply high pass and low pass (frequency) filter again; keep [30Hz, 300Hz]\n",
         "white_hdata = white_hdata.highpass_fir(30., 500).lowpass_fir(300, 1000)\n",
         "white_ldata = white_ldata.highpass_fir(30., 500).lowpass_fir(300, 1000)\n",
         "\n",
@@ -307,7 +308,7 @@
           "height": 241
         },
         "id": "cibslVM_uIYK",
-        "outputId": "eefaa056-871f-41a6-c0a1-212216a8f92c"
+        "outputId": "d7eea5f4-3ef8-4a3b-9617-0806fb5bd55d"
       },
       "execution_count": 8,
       "outputs": [
@@ -341,14 +342,14 @@
         "white_hdata_crop = white_hdata[int(0.15*rate):int(0.23*rate)]+5; white_ldata_crop = white_ldata[int((0.15-0.0069)*rate):int((0.23-0.0069)*rate)]-5      # elevate signals\n",
         "print(white_hdata_crop.shape)\n",
         "zero_hcrossings = np.where(np.diff(np.sign(white_hdata_crop)))[0]; zero_lcrossings = np.where(np.diff(np.sign(white_ldata_crop)))[0] \n",
-        "print(zero_hcrossings); print(zero_lcrossings)"
+        "print(zero_hcrossings); print(zero_lcrossings)        # zero-crossing positions in the siganl"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "XFlJA2IsCIYP",
-        "outputId": "60dbec69-7f66-4924-dc82-eeb60532644e"
+        "outputId": "30cb3f5b-7985-457e-96d4-1116884c581c"
       },
       "execution_count": 9,
       "outputs": [
@@ -379,8 +380,8 @@
         "#ax[0,1].set_xlabel('Time')\n",
         "ax[0,1].set_title('L1 Zero-crossings')\n",
         "\n",
-        "zero_hcrossings_clean = [  14, 38,57,  78 , 99, 112, 126 ,138, 146, 153 ,159 ]              # 200 lowpass crossing\n",
-        "zero_lcrossings_clean = [ 11, 36 , 59,  79,  96 ,113, 123, 137, 144 ,152, 158]             # 200 lowpass crossing\n",
+        "zero_hcrossings_clean = [  14, 38,57,  78 , 99, 112, 126 ,138, 146, 153 ,159 ]              # referenced 200 lowpass signal zero-crossings\n",
+        "zero_lcrossings_clean = [ 11, 36 , 59,  79,  96 ,113, 123, 137, 144 ,152, 158]              # referenced 200 lowpass signal zero-crossing\n",
         "ax[1,0].plot(white_hdata_crop)\n",
         "ax[1,0].scatter(zero_hcrossings_clean, np.zeros(len(zero_hcrossings_clean)), c='b')\n",
         "ax[1,0].set_xlabel('Time')\n",
@@ -400,7 +401,7 @@
           "height": 513
         },
         "id": "cyyA1tCTtb-2",
-        "outputId": "a98c3d6e-0c3e-4e22-c858-e42f85022d5c"
+        "outputId": "e289f505-2260-4be1-dbd1-892921f9e7d4"
       },
       "execution_count": 10,
       "outputs": [
@@ -463,7 +464,7 @@
           "height": 629
         },
         "id": "p6Ho3WXrHMN2",
-        "outputId": "bc72dc05-e156-4af9-d44b-0a09cbbd6b9a"
+        "outputId": "30a624a6-ca02-436d-e348-4b7a13f9e2b7"
       },
       "execution_count": 11,
       "outputs": [
@@ -520,7 +521,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Z3ieM8oCm0DG",
-        "outputId": "7aea4a4e-7c9a-468f-8506-748bffa83223"
+        "outputId": "f9dd9d44-1500-49ed-a133-4905bd93e4c0"
       },
       "execution_count": 12,
       "outputs": [
@@ -530,25 +531,25 @@
           "text": [
             "Collecting lmfit\n",
             "  Downloading lmfit-1.0.3.tar.gz (292 kB)\n",
-            "\u001b[K     |████████████████████████████████| 292 kB 5.3 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 292 kB 2.9 MB/s \n",
             "\u001b[?25hCollecting asteval>=0.9.22\n",
             "  Downloading asteval-0.9.26.tar.gz (40 kB)\n",
-            "\u001b[K     |████████████████████████████████| 40 kB 2.4 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 40 kB 5.4 MB/s \n",
             "\u001b[?25hRequirement already satisfied: numpy>=1.18 in /usr/local/lib/python3.7/dist-packages (from lmfit) (1.19.5)\n",
             "Requirement already satisfied: scipy>=1.4 in /usr/local/lib/python3.7/dist-packages (from lmfit) (1.4.1)\n",
             "Collecting uncertainties>=3.0.1\n",
             "  Downloading uncertainties-3.1.6-py2.py3-none-any.whl (98 kB)\n",
-            "\u001b[K     |████████████████████████████████| 98 kB 5.1 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 98 kB 7.0 MB/s \n",
             "\u001b[?25hRequirement already satisfied: importlib_metadata in /usr/local/lib/python3.7/dist-packages (from asteval>=0.9.22->lmfit) (4.10.1)\n",
             "Requirement already satisfied: future in /usr/local/lib/python3.7/dist-packages (from uncertainties>=3.0.1->lmfit) (0.16.0)\n",
-            "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.7/dist-packages (from importlib_metadata->asteval>=0.9.22->lmfit) (3.7.0)\n",
             "Requirement already satisfied: typing-extensions>=3.6.4 in /usr/local/lib/python3.7/dist-packages (from importlib_metadata->asteval>=0.9.22->lmfit) (3.10.0.2)\n",
+            "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.7/dist-packages (from importlib_metadata->asteval>=0.9.22->lmfit) (3.7.0)\n",
             "Building wheels for collected packages: lmfit, asteval\n",
             "  Building wheel for lmfit (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for lmfit: filename=lmfit-1.0.3-py3-none-any.whl size=84402 sha256=fd6f1b3e47e77614b60dbede84c0d3f1bb89c146a5ea83a09a2c91399157e0d2\n",
+            "  Created wheel for lmfit: filename=lmfit-1.0.3-py3-none-any.whl size=84402 sha256=6a408c9035aa46126c80ea8b2ef939bbe5e839a58e2369a2f35fe03d90e1382a\n",
             "  Stored in directory: /root/.cache/pip/wheels/b9/7a/d1/236aa0f8196b264fda481a112f7cfb1bfde7bfb20235f8e331\n",
             "  Building wheel for asteval (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for asteval: filename=asteval-0.9.26-py3-none-any.whl size=17648 sha256=f39bfd550957b63fc68161ae10acd211a03f786f1da213e02da6cdc4cfef8f34\n",
+            "  Created wheel for asteval: filename=asteval-0.9.26-py3-none-any.whl size=17648 sha256=e4f4856c65534b96519f50d59e73e8554cb653543a88598aeb414f99f5bc8a09\n",
             "  Stored in directory: /root/.cache/pip/wheels/4c/e9/f0/bc343d5b77d2fded45177f424a6b0b9224b92ff6e7c150bad4\n",
             "Successfully built lmfit asteval\n",
             "Installing collected packages: uncertainties, asteval, lmfit\n",
@@ -565,7 +566,7 @@
         "\n",
         "def residual(ps, tc, data):\n",
         "    M_c = ps['M_c'].value\n",
-        "    tc = tc       #tc = 0.08\n",
+        "    tc = tc               #tc = 0.08\n",
         "    t = np.linspace(0, tc, len(data))\n",
         "    tau = tc -t\n",
         "    c = 3*10**8           # speed of light\n",
@@ -576,7 +577,7 @@
         "\n",
         "tc = 0.08\n",
         "params = Parameters()\n",
-        "params.add('M_c', value=0)\n",
+        "params.add('M_c', value=0)        # set the chirp mass as the only variable\n",
         "\n",
         "result_h = minimize(residual, params, args=(tc, IF_hdata), method='leastsq')\n",
         "final_h = IF_hdata + result_h.residual.reshape(IF_hdata.shape)\n",
@@ -602,7 +603,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 647
         },
-        "outputId": "11e5a464-23e3-4ffd-968c-28c11cc4a2c3"
+        "outputId": "229ae60c-45d5-474b-8a48-f530f91fa1e1"
       },
       "execution_count": 13,
       "outputs": [
@@ -658,7 +659,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5TVeAWDj8c1P",
-        "outputId": "2412ba1e-eaa8-46b0-e013-1a3125394c8b"
+        "outputId": "b5cbfd0d-9cdd-44cf-ca99-1e37364212d4"
       },
       "execution_count": 14,
       "outputs": [
@@ -701,7 +702,7 @@
           "height": 382
         },
         "id": "23g8apDdWMxc",
-        "outputId": "173b5e10-12b3-442a-bce9-9d37f11905a6"
+        "outputId": "9707c3d5-3bbe-410c-bb2a-3ba815d2dc38"
       },
       "execution_count": 15,
       "outputs": [
@@ -752,7 +753,7 @@
         "def freq_gw(t):\n",
         "    '''The frequency evolution function'''\n",
         "    t = np.linspace(0.01, t, 100)\n",
-        "    tc = 1\n",
+        "    tc = 1                # a random tc for testing\n",
         "    tau = tc - t\n",
         "    M = 25\n",
         "    c = 3*10**8           # speed of light\n",
@@ -770,7 +771,7 @@
     {
       "cell_type": "code",
       "source": [
-        "freq = freq_gw(1)\n",
+        "freq = freq_gw(1)       # test\n",
         "plt.plot(freq)\n",
         "plt.show()"
       ],
@@ -780,7 +781,7 @@
           "height": 300
         },
         "id": "kMhK7_UrPEfX",
-        "outputId": "17d3876e-c7fd-4af5-a825-085760341ba2"
+        "outputId": "85d717b6-7a17-4f6c-cd7c-f3476e1ed4c0"
       },
       "execution_count": 17,
       "outputs": [
@@ -842,7 +843,7 @@
           "height": 312
         },
         "id": "IamFP_7wkoF2",
-        "outputId": "4947407b-3be9-46a9-806d-2492641721e6"
+        "outputId": "cef6cdb2-b23e-49af-a8ee-d35cc1d86c2b"
       },
       "execution_count": 18,
       "outputs": [
@@ -894,7 +895,7 @@
           "height": 312
         },
         "id": "unbtcQrnUv-S",
-        "outputId": "da55881a-8ee9-452d-96f6-f1ecb37eac60"
+        "outputId": "f499f533-d5c6-4400-9be7-5449023b0391"
       },
       "execution_count": 19,
       "outputs": [
@@ -934,7 +935,7 @@
           "height": 269
         },
         "id": "t_tEQ9h4QSIC",
-        "outputId": "c674975c-68c9-4fca-ca1d-fb2ba347d56a"
+        "outputId": "565607cc-612c-4513-e998-c4a897845ff6"
       },
       "execution_count": 20,
       "outputs": [
