--- a/simple_BBH_waveform.ipynb
+++ b/simple_BBH_waveform.ipynb
@@ -6,7 +6,7 @@
       "name": "simple_BBH_waveform.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPY/Hu2f45olOPSS0e0faLl",
+      "authorship_tag": "ABX9TyMOikyPum0UW/PiCssxxR0P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "AUwoON6eZGo1"
       },
@@ -104,7 +104,7 @@
         "id": "dnaJhB2kZQ-d",
         "outputId": "9e21c815-43ed-4683-cbfa-0f1b98b40630"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -149,7 +149,7 @@
         },
         "outputId": "eff175a1-185f-45fa-d883-279dae47297e"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -193,7 +193,7 @@
       "metadata": {
         "id": "hgWamg3c9tRW"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -229,7 +229,7 @@
         "id": "ifacYCY6l_do",
         "outputId": "6db9b823-4721-4965-96ff-fbc1baae13f0"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -252,7 +252,7 @@
         "\n",
         "from pycbc.psd import interpolate, inverse_spectrum_truncation\n",
         "# Estimate the power spectral density\n",
-        "# the PSDs are used in the denoising step (strain whitening)\n",
+        "# the PSDs are used in the denoising step\n",
         "psdh = conditionedhdata.psd(4); psdl = conditionedldata.psd(4)       # take the first 4 seconds of data and calculate the psd\n",
         "psdh = interpolate(psdh, conditionedhdata.delta_f); psdl = interpolate(psdl, conditionedldata.delta_f)       # interpolate the resutl to the proper length\n",
         "psdh = inverse_spectrum_truncation(psdh, int(4 * conditionedhdata.sample_rate), low_frequency_cutoff=15)\n",
@@ -261,7 +261,7 @@
       "metadata": {
         "id": "qAuIt8Cfs4qY"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -275,13 +275,13 @@
       "metadata": {
         "id": "ryetcyuHt_vr"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Data whitening as a step of denoising\n",
+        "# frequency domain denoising\n",
         "white_hdata = (conditionedhdata.to_frequencyseries() / psdh**0.5).to_timeseries()\n",
         "white_ldata = (conditionedldata.to_frequencyseries() / psdl**0.5).to_timeseries()\n",
         "\n",
@@ -310,7 +310,7 @@
         "id": "cibslVM_uIYK",
         "outputId": "d7eea5f4-3ef8-4a3b-9617-0806fb5bd55d"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -351,7 +351,7 @@
         "id": "XFlJA2IsCIYP",
         "outputId": "30cb3f5b-7985-457e-96d4-1116884c581c"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -403,7 +403,7 @@
         "id": "cyyA1tCTtb-2",
         "outputId": "e289f505-2260-4be1-dbd1-892921f9e7d4"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -466,7 +466,7 @@
         "id": "p6Ho3WXrHMN2",
         "outputId": "30a624a6-ca02-436d-e348-4b7a13f9e2b7"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -523,7 +523,7 @@
         "id": "Z3ieM8oCm0DG",
         "outputId": "f9dd9d44-1500-49ed-a133-4905bd93e4c0"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -605,7 +605,7 @@
         },
         "outputId": "229ae60c-45d5-474b-8a48-f530f91fa1e1"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -661,7 +661,7 @@
         "id": "5TVeAWDj8c1P",
         "outputId": "b5cbfd0d-9cdd-44cf-ca99-1e37364212d4"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -704,7 +704,7 @@
         "id": "23g8apDdWMxc",
         "outputId": "9707c3d5-3bbe-410c-bb2a-3ba815d2dc38"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -765,7 +765,7 @@
       "metadata": {
         "id": "Hn2CNYHLZJ4D"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -783,7 +783,7 @@
         "id": "kMhK7_UrPEfX",
         "outputId": "85d717b6-7a17-4f6c-cd7c-f3476e1ed4c0"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -845,7 +845,7 @@
         "id": "IamFP_7wkoF2",
         "outputId": "cef6cdb2-b23e-49af-a8ee-d35cc1d86c2b"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -897,7 +897,7 @@
         "id": "unbtcQrnUv-S",
         "outputId": "f499f533-d5c6-4400-9be7-5449023b0391"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -937,7 +937,7 @@
         "id": "t_tEQ9h4QSIC",
         "outputId": "565607cc-612c-4513-e998-c4a897845ff6"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
